--- a/web/src/app/timeline/components/timeline-hover-overlay.component.scss
+++ b/web/src/app/timeline/components/timeline-hover-overlay.component.scss
@@ -93,7 +93,7 @@ $selected-log-tint: mat.m2-get-color-from-palette(mat.$m2-gray-palette, 400);
 .table {
   display: grid;
   grid-template-areas: "state misc time log";
-  grid-template-columns: auto auto auto 1fr;
+  grid-template-columns: auto auto auto minmax(0, 1fr);
   grid-auto-rows: auto;
   padding-bottom: 22px;
   .header {
@@ -257,8 +257,12 @@ $selected-log-tint: mat.m2-get-color-from-palette(mat.$m2-gray-palette, 400);
     .body-log-summaries {
       display: flex;
       align-items: center;
+      overflow-wrap: anywhere;
       padding: 2px 10px;
       font-size: 12px;
+      .summary-text {
+        width: 100%;
+      }
     }
 
     .bottom-line {
